clean the notebook

--- a/deploying_model_on_vertex_ai.ipynb
+++ b/deploying_model_on_vertex_ai.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c42d2d75",
+   "id": "aa79480e",
    "metadata": {},
    "source": [
     "# Deploying an ML model on Vertex AI\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bac6876",
+   "id": "7a9ddff6",
    "metadata": {},
    "source": [
     "<table align=\"left\">\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f1e90e0",
+   "id": "d9714026",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7800f15a",
+   "id": "cdd40c47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a17ff74",
+   "id": "7cdc8c9f",
    "metadata": {},
    "source": [
     "## Print tensorflow version"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c4c6db0",
+   "id": "73b6a99b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93db2233",
+   "id": "f8bcc8f0",
    "metadata": {},
    "source": [
     "## Authenticate to GCP"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbd89737",
+   "id": "cbdcd5f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "572747e4",
+   "id": "ea1720df",
    "metadata": {},
    "source": [
     "## Importing required libraries"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db66346e",
+   "id": "93b6b5e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad780640",
+   "id": "62bf15bb",
    "metadata": {},
    "source": [
     "## Setting environment variables"
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a672e31",
+   "id": "96e9f96c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dac991b",
+   "id": "c6b8ac2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4d83821",
+   "id": "82b89e71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41801d57",
+   "id": "d50ea243",
    "metadata": {},
    "source": [
     "## Downloading the dataset\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba35c94",
+   "id": "b8e0ad40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c509e106",
+   "id": "8002399c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2e162a2",
+   "id": "9ac3b0ca",
    "metadata": {},
    "source": [
     "## Create a GCS bucket"
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1223a4ea",
+   "id": "f6b98072",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1948f967",
+   "id": "fa53891e",
    "metadata": {},
    "source": [
     "## Copy the data"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c9705de",
+   "id": "8925636c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,9 +289,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "769381dc",
+   "id": "dbe81078",
    "metadata": {},
    "source": [
+    "## Data on Vertex AI\n",
+    "\n",
+    "On Vertex AI, the data you use needs to be in a specfic format. Here's a guide to understanding [the process](https://cloud.google.com/vertex-ai/docs/text-data/classification/prepare-data). \n",
+    "\n",
+    "More specific information about instances of data: [here](https://cloud.google.com/vertex-ai/docs/reference/rpc/google.cloud.aiplatform.v1/schema#google.cloud.aiplatform.v1.schema.TextDataItem)\n",
+    "\n",
     "## Parsing and dumping json with Pydantic\n",
     "\n",
     "add links and info about the schema we have to use"
@@ -300,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47f96615",
+   "id": "0ee27ab5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cf80783",
+   "id": "947ba29c",
    "metadata": {},
    "source": [
     "## Creating Vertex AI compatible instances"
@@ -341,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b25ebc6f",
+   "id": "6ac447be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3778524f",
+   "id": "6d9f8993",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +452,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6dc8d4a2",
+   "id": "a440be03",
    "metadata": {},
    "source": [
     "## Writing the data to GCS\n",
@@ -457,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c54571b",
+   "id": "b9599c1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f48fcd72",
+   "id": "1a12c2ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d1b6ec9",
+   "id": "aacbd03f",
    "metadata": {},
    "source": [
     "## Vertex AI specific constants"
@@ -492,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be0730a4",
+   "id": "e11a2f46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +513,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "17f34cf9",
+   "id": "d58b64b3",
    "metadata": {},
    "source": [
     "## Creating a Vertex AI dataset\n",
@@ -518,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9d71cad",
+   "id": "812574a8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -526,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45ea79cf",
+   "id": "3bf60c4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,14 +561,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66455d51",
+   "id": "e4322f6e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "44409368",
+   "id": "19ba7999",
    "metadata": {},
    "source": [
     "## Training a model \n",
@@ -611,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40c4475c",
+   "id": "2a21dbdb",
    "metadata": {},
    "source": [
     "---\n",
@@ -619,13 +625,19 @@
     "# Before you proceed any further, make sure you have uploaded the trained model successfully to the `MODEL_BUCKET_URI` \n",
     "---\n",
     "\n",
-    "## Uploading the trained model"
+    "## Uploading the trained model\n",
+    "\n",
+    "**This is a long running operation**. To monitor this process, you can simply use gcloud, e.g.\n",
+    "\n",
+    "```\n",
+    "curl -X GET -H \"Authorization: Bearer $(gcloud auth print-access-token)\" \"https://us-central1-aiplatform.googleapis.com/v1/projects/<project_id>/locations/us-central1/models/<model_id>/operations/<operation_id>\"\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9580e73e",
+   "id": "4cb1d402",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,16 +653,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c306411a",
+   "id": "0385e54b",
    "metadata": {},
    "source": [
-    "## Deploying a model endpoint\n"
+    "## Deploying a model endpoint"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48c9106f",
+   "id": "ea989a95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27df4c0c",
+   "id": "c1330802",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4690377",
+   "id": "75f50b84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c90401e",
+   "id": "321c0a3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "119bedbb",
+   "id": "5fdc01bd",
    "metadata": {},
    "source": [
     "## Predicting using the deployed endpoint"
@@ -700,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6e320e7",
+   "id": "4fe5dc34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,14 +736,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f92ab8c",
+   "id": "7868add4",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ccfaafdf",
+   "id": "c662e80b",
    "metadata": {},
    "source": [
     "## Cleanup"
@@ -740,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b96e8d",
+   "id": "a91a0d7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd2479ab",
+   "id": "b2c49b85",
    "metadata": {},
    "outputs": [],
    "source": [
