clean the notebook

--- a/deploying_model_on_vertex_ai.ipynb
+++ b/deploying_model_on_vertex_ai.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aa79480e",
+   "id": "9b0e191c",
    "metadata": {},
    "source": [
     "# Deploying an ML model on Vertex AI\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a9ddff6",
+   "id": "05e08584",
    "metadata": {},
    "source": [
     "<table align=\"left\">\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9714026",
+   "id": "dd4504d2",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdd40c47",
+   "id": "ddcd1546",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cdc8c9f",
+   "id": "099d1133",
    "metadata": {},
    "source": [
     "## Print tensorflow version"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73b6a99b",
+   "id": "114ec7b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8bcc8f0",
+   "id": "f73e6112",
    "metadata": {},
    "source": [
     "## Authenticate to GCP"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbdcd5f8",
+   "id": "5f72383a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea1720df",
+   "id": "486c5859",
    "metadata": {},
    "source": [
     "## Importing required libraries"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93b6b5e0",
+   "id": "e00afcb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62bf15bb",
+   "id": "40bb7da5",
    "metadata": {},
    "source": [
     "## Setting environment variables"
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96e9f96c",
+   "id": "da545b00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6b8ac2a",
+   "id": "9708ab11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82b89e71",
+   "id": "39c14aeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d50ea243",
+   "id": "075aa892",
    "metadata": {},
    "source": [
     "## Downloading the dataset\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8e0ad40",
+   "id": "78762b53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8002399c",
+   "id": "0cc32f6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ac3b0ca",
+   "id": "f02a60da",
    "metadata": {},
    "source": [
     "## Create a GCS bucket"
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6b98072",
+   "id": "08de3499",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa53891e",
+   "id": "a09d9784",
    "metadata": {},
    "source": [
     "## Copy the data"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8925636c",
+   "id": "ab86eef4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbe81078",
+   "id": "9e2307dc",
    "metadata": {},
    "source": [
     "## Data on Vertex AI\n",
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ee27ab5",
+   "id": "cdf32a5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "947ba29c",
+   "id": "3b73d02e",
    "metadata": {},
    "source": [
     "## Creating Vertex AI compatible instances"
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ac447be",
+   "id": "be5ed92b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d9f8993",
+   "id": "d0232fd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a440be03",
+   "id": "d2710c40",
    "metadata": {},
    "source": [
     "## Writing the data to GCS\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9599c1e",
+   "id": "828a920d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a12c2ba",
+   "id": "5a6c6237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aacbd03f",
+   "id": "5eef7e4a",
    "metadata": {},
    "source": [
     "## Vertex AI specific constants"
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e11a2f46",
+   "id": "13115ff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d58b64b3",
+   "id": "6d7d92e2",
    "metadata": {},
    "source": [
     "## Creating a Vertex AI dataset\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "812574a8",
+   "id": "beb79d7b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bf60c4e",
+   "id": "bd03b94a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,14 +561,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4322f6e",
+   "id": "54bfc1a0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "19ba7999",
+   "id": "731a56bd",
    "metadata": {},
    "source": [
     "## Training a model \n",
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a21dbdb",
+   "id": "d4cb773c",
    "metadata": {},
    "source": [
     "---\n",
@@ -637,23 +637,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cb1d402",
+   "id": "39029b70",
    "metadata": {},
    "outputs": [],
    "source": [
     "!gcloud ai models upload \\\n",
-    "    --region=$REGION \\\n",
-    "    --model-id=$MODEL_ID \\\n",
-    "    --display-name=\"imdb-review-model\" \\\n",
-    "    --container-image-uri=\"us-docker.pkg.dev/vertex-ai/training/tf-cpu.2-11:latest\" \\\n",
-    "    --artifact-uri=$MODEL_BUCKET_URI/text_classifier \\\n",
-    "    --version-aliases=\"custom\" \\\n",
-    "    --verbosity=\"debug\""
+    "  --region=$REGION \\\n",
+    "  --model-id=$CUSTOM_MODEL_ID \\\n",
+    "  --display-name=\"imdb-review-model\" \\\n",
+    "  --container-image-uri=\"us-docker.pkg.dev/vertex-ai-restricted/prediction/tf_opt-cpu.2-11:latest\" \\\n",
+    "  --artifact-uri=$MODEL_BUCKET_URI/text_classifier \\\n",
+    "  --version-aliases=\"custom\" \\\n",
+    "  --verbosity=\"info\"\n",
+    "\n",
+    "#aiplatform.Model.upload(\n",
+    "#    model_id=CUSTOM_MODEL_ID,\n",
+    "#    display_name=CUSTOM_MODEL_ID,\n",
+    "#    serving_container_image_uri=\"tensorflow/serving:2.11.0\",\n",
+    "#    artifact_uri=MODEL_BUCKET_URI+\"/text_classifier\",\n",
+    "#    version_aliases=[\"custom\"],\n",
+    "#    sync=False\n",
+    "#)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0385e54b",
+   "id": "08e50a20",
    "metadata": {},
    "source": [
     "## Deploying a model endpoint"
@@ -662,18 +671,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea989a95",
+   "id": "1a3a1705",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_resource_name = MODEL_ID + \"@custom\" #+\"@\"+MODEL_VERSION_ALIAS\n",
+    "ENDPOINT_ID = \"123456\"\n",
+    "endpoint = aiplatform.Endpoint(endpoint_name=ENDPOINT_ID)\n",
+    "endpoint.create(display_name=\"imdb-review-predict\", endpoint_id=ENDPOINT_ID)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1284564",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_resource_name = MODEL_ID + \"@1\" \n",
     "model = aiplatform.Model(model_name=MODEL_ID)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1330802",
+   "id": "13cdc291",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75f50b84",
+   "id": "0027c04c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "321c0a3a",
+   "id": "f683215a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fdc01bd",
+   "id": "6657871f",
    "metadata": {},
    "source": [
     "## Predicting using the deployed endpoint"
@@ -712,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fe5dc34",
+   "id": "33b7c2e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,14 +757,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7868add4",
+   "id": "815b82dc",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c662e80b",
+   "id": "1f632f12",
    "metadata": {},
    "source": [
     "## Cleanup"
@@ -752,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a91a0d7b",
+   "id": "0a9ca7fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2c49b85",
+   "id": "3a9c3d28",
    "metadata": {},
    "outputs": [],
    "source": [
