clean the notebook

--- a/deploying_model_on_vertex_ai.ipynb
+++ b/deploying_model_on_vertex_ai.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9b0e191c",
+   "id": "fce813ac",
    "metadata": {},
    "source": [
     "# Deploying an ML model on Vertex AI\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05e08584",
+   "id": "996010b6",
    "metadata": {},
    "source": [
     "<table align=\"left\">\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd4504d2",
+   "id": "5bcfe7fb",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddcd1546",
+   "id": "029bf24f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "099d1133",
+   "id": "ad9dbce5",
    "metadata": {},
    "source": [
     "## Print tensorflow version"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114ec7b9",
+   "id": "a91fb811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f73e6112",
+   "id": "94b868cf",
    "metadata": {},
    "source": [
     "## Authenticate to GCP"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f72383a",
+   "id": "99ab083e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "486c5859",
+   "id": "18d472ab",
    "metadata": {},
    "source": [
     "## Importing required libraries"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e00afcb2",
+   "id": "4a577ce4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40bb7da5",
+   "id": "ed17d7cf",
    "metadata": {},
    "source": [
     "## Setting environment variables"
@@ -129,20 +129,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da545b00",
+   "id": "a45adc9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "PROJECT_ID = \"gcp-tf-review-classification\"\n",
-    "BUCKET_URI = \"gs://imdb-movie-review-dataset\" \n",
-    "MODEL_BUCKET_URI = \"gs://imdb-movie-review-models\" \n",
+    "BUCKET_URI = \"\" # e.g. gs://imdb-movie-review-dataset-thga\n",
+    "MODEL_BUCKET_URI = \"\" # e.g. \"gs://imdb-movie-review-models-thga\" \n",
     "REGION = \"us-central1\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9708ab11",
+   "id": "5a1a0644",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39c14aeb",
+   "id": "198cbf4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "075aa892",
+   "id": "169b942c",
    "metadata": {},
    "source": [
     "## Downloading the dataset\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78762b53",
+   "id": "0eb78c68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cc32f6a",
+   "id": "23a75aca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f02a60da",
+   "id": "57ca335e",
    "metadata": {},
    "source": [
     "## Create a GCS bucket"
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08de3499",
+   "id": "68507238",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a09d9784",
+   "id": "5a7374e0",
    "metadata": {},
    "source": [
     "## Copy the data"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab86eef4",
+   "id": "b9653149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e2307dc",
+   "id": "2ce70bfe",
    "metadata": {},
    "source": [
     "## Data on Vertex AI\n",
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdf32a5e",
+   "id": "ac3d0508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b73d02e",
+   "id": "c57c2664",
    "metadata": {},
    "source": [
     "## Creating Vertex AI compatible instances"
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be5ed92b",
+   "id": "99d0604f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0232fd4",
+   "id": "07d17eeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d2710c40",
+   "id": "7b1c9dd1",
    "metadata": {},
    "source": [
     "## Writing the data to GCS\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "828a920d",
+   "id": "1cfb203d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a6c6237",
+   "id": "ed1cca1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eef7e4a",
+   "id": "4cea03cf",
    "metadata": {},
    "source": [
     "## Vertex AI specific constants"
@@ -498,12 +498,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13115ff9",
+   "id": "305f0450",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_NAME = \"imdb-review-dataset\"\n",
-    "MODEL_ID = \"imdb-review-model\""
+    "DATASET_NAME = \"imdb-review-dataset\"\n"
    ]
   },
   {
@@ -513,7 +512,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6d7d92e2",
+   "id": "df78ac9d",
    "metadata": {},
    "source": [
     "## Creating a Vertex AI dataset\n",
@@ -524,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beb79d7b",
+   "id": "44400fd7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -532,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd03b94a",
+   "id": "289c9fc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,16 +558,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54bfc1a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "731a56bd",
+   "id": "72db7155",
    "metadata": {},
    "source": [
     "## Training a model \n",
@@ -581,31 +572,6 @@
     "2. Upload an already trained model to Vertex AI  \n",
     " \n",
     "\n",
-    "### Sample code to trigger an AutoML training job\n",
-    "\n",
-    "```\n",
-    "JOB_NAME = \"imdb_review_classification_automl_train\"\n",
-    "MODEL_ID = \"imdb-review-model\"\n",
-    "MODEL_VERSION_ALIAS = \"automl\"\n",
-    "\n",
-    "training_job = aiplatform.AutoMLTextTrainingJob(\n",
-    "    display_name=JOB_NAME,\n",
-    "    prediction_type=\"classification\",\n",
-    ")\n",
-    "\n",
-    "# Use training_job.state to poll the current state of the job\n",
-    "model = training_job.run(\n",
-    "    dataset=dataset,\n",
-    "    training_filter_split=\"labels.aiplatform.googleapis.com/ml_use=training\",\n",
-    "    validation_filter_split=\"labels.aiplatform.googleapis.com/ml_use=validation\",\n",
-    "    test_filter_split=\"labels.aiplatform.googleapis.com/ml_use=test\",\n",
-    "    model_id=MODEL_ID,\n",
-    "    model_version_aliases=[MODEL_VERSION_ALIAS],\n",
-    "    model_version_description=\"Initial version of the model\",\n",
-    "    sync=False\n",
-    ")\n",
-    "```\n",
-    "\n",
     "### Quotas to know for custom models training\n",
     "\n",
     "```\n",
@@ -616,8 +582,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7917dbca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AUTOML_JOB_NAME = \"\" # e.g. \"imdb_review_classification_automl_train_thga\"\n",
+    "\n",
+    "AUTOML_MODEL_ID = \"\" # e.g. \"imdb-review-model-thga\"\n",
+    "AUTOML_MODEL_VERSION_ALIAS = \"automl\"\n",
+    "\n",
+    "\n",
+    "training_job = aiplatform.AutoMLTextTrainingJob(\n",
+    "    display_name=AUTOML_JOB_NAME,\n",
+    "    prediction_type=\"classification\",\n",
+    ")\n",
+    "\n",
+    "# Use training_job.state to poll the current state of the job\n",
+    "model = training_job.run(\n",
+    "    dataset=dataset,\n",
+    "    training_filter_split=\"labels.aiplatform.googleapis.com/ml_use=training\",\n",
+    "    validation_filter_split=\"labels.aiplatform.googleapis.com/ml_use=validation\",\n",
+    "    test_filter_split=\"labels.aiplatform.googleapis.com/ml_use=test\",\n",
+    "    model_id=AUTOML_MODEL_ID,\n",
+    "    model_version_aliases=[AUTOML_MODEL_VERSION_ALIAS],\n",
+    "    model_version_description=\"Initial version of the automl model\",\n",
+    "    sync=False\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "d4cb773c",
+   "id": "82a1baff",
    "metadata": {},
    "source": [
     "---\n",
@@ -637,7 +634,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39029b70",
+   "id": "3583be10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CUSTOM_MODEL_ID = \"\" #e.g. \"imdb-review-model-thga\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69be9132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08e50a20",
+   "id": "9f1e0f59",
    "metadata": {},
    "source": [
     "## Deploying a model endpoint"
@@ -671,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a3a1705",
+   "id": "d756b866",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1284564",
+   "id": "c6d96094",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13cdc291",
+   "id": "e1782330",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0027c04c",
+   "id": "d041ab49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f683215a",
+   "id": "edc3bef2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6657871f",
+   "id": "cb6cbc1e",
    "metadata": {},
    "source": [
     "## Predicting using the deployed endpoint"
@@ -733,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33b7c2e6",
+   "id": "f31210fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,14 +764,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "815b82dc",
+   "id": "19f945e4",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1f632f12",
+   "id": "30fd596f",
    "metadata": {},
    "source": [
     "## Cleanup"
@@ -773,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a9ca7fc",
+   "id": "e43b0158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a9c3d28",
+   "id": "175cc60d",
    "metadata": {},
    "outputs": [],
    "source": [
